--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,7 +67,8 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
 .voyager .navbar, .voyager .navbar.navbar-default {
     border-bottom: 1px solid #fff;
     box-shadow: 0 0 0;
-    background: transparent;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
 }
 .hamburger-inner {
     background: #ffffff;
