--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,10 +71,10 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
     box-shadow: 0 1px 3px rgba(50, 50, 93, 0.15), 0 1px 0 rgba(0, 0, 0, 0.02);
 }
 .hamburger-inner {
-    background: #ffffff;
+    background: #f8bd01;
 }
 .hamburger-inner:after, .hamburger-inner:before {
-    background: #ffffff;
+    background: #f8bd01;
 }
 
 .hamburger:focus {
