--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -38,7 +38,14 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
     -webkit-transition: width .5s cubic-bezier(.19,1,.22,1);
     transition: width .5s cubic-bezier(.19,1,.22,1);
 }
-.app-container .content-container .side-body.padding-top{
+.app-container .content-container .side-body.padding-top:after{
+    content: " ";
+    width: 100%;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    height: 300px;
+    position: absolute;
     background-image: linear-gradient(to bottom, #f39c12, #f2ac03, #efbc00, #eacb00, #e3db0e);
     background-size: 100% 378px;
     background-repeat: no-repeat;
@@ -140,9 +147,9 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
 .app-container .side-body {
     margin-right: 0px;
 }
-.container-fluid{
-    padding-right: 0px;
-}
+/*.container-fluid{*/
+    /*padding-right: 0px;*/
+/*}*/
 .voyager .navbar .navbar-nav>li.profile {
     border-left: 0;
     margin-right: 20px;
@@ -183,10 +190,10 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
     .pt-md-8, .py-md-8 {
         padding: 0rem 2rem !important;
     }
-    .main-content .container-fluid {
-        padding-left: 39px !important;
-        padding-right: 39px !important;
-    }
+    /*.main-content .container-fluid {*/
+        /*padding-left: 39px !important;*/
+        /*padding-right: 39px !important;*/
+    /*}*/
 }
 @media (min-width: 1200px)
 {
@@ -195,13 +202,17 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
     }
 }
 @media (max-width: 767px) {
-    .container-fluid {
-        padding-right: 0px;
-        padding-left: 0px;
-    }
+    /*.container-fluid {*/
+        /*padding-right: 0px;*/
+        /*padding-left: 0px;*/
+    /*}*/
 
     #search-input > .input-group {
         display: table;
+    }
+    .app-container .side-body {
+        margin-right: 0px;
+        margin-left: 0px !important;
     }
 }
 
@@ -308,4 +319,14 @@ select[name=dataTable_length] {
 .custom-file label{
     white-space: nowrap;
     overflow: hidden;
+}
+
+.page-content .panel,
+.page-content .col-md-12,
+.voyager .card {
+    z-index: 9;
+}
+
+.app-container .content-container .side-menu .navbar-nav li a .icon {
+    text-align: left !important;
 }
