--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -330,3 +330,15 @@ select[name=dataTable_length] {
 .app-container .content-container .side-menu .navbar-nav li a .icon {
     text-align: left !important;
 }
+
+.select2-container--default .select2-selection--single {
+    border: 1px solid #cad1d7;
+    border-radius: 5px;
+}
+
+.select2-container--default .select2-selection--single span{
+    color: #8898aa !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 31px;
+}
