--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -342,3 +342,5 @@ select[name=dataTable_length] {
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     line-height: 31px;
 }
+
+.menu-vendedor .navbar-nav > li.dropdown:last-child{ display: none}
