--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -362,6 +362,33 @@ select[name=dataTable_length] {
     content: "Subir Archivo";
     font-size: 12px;
     width: 100%;
-    background-color: #00aaff;
-    color: white;
+}
+
+.custom-file {
+    position: relative;
+}
+.custom-file .delete-image {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    background-color: #fff;
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    opacity: .7;
+    border: 1px solid #f1f1f1;
+}
+.custom-file .delete-image:hover {
+    opacity: 1;
+}
+
+.custom-file-label::after {
+    border: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
