--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -194,6 +194,9 @@ app-container.expanded .content-container .side-menu .navbar-header .navbar-bran
     /*padding-left: 39px !important;*/
     /*padding-right: 39px !important;*/
     /*}*/
+    input[type="date"] {
+        max-width: 250px;
+    }
 }
 @media (min-width: 1200px)
 {
@@ -385,6 +388,14 @@ select[name=dataTable_length] {
     opacity: 1;
 }
 
+.has-error .select2-container--default .select2-selection--single,
+.has-error .custom-file-label {
+    border-color: #f96767;
+}
+.has-error .custom-file img {
+    display: none;
+}
+
 .custom-file-label::after {
     border: none;
     padding: 0;
@@ -393,7 +404,16 @@ select[name=dataTable_length] {
     align-items: center;
 }
 
-
 textarea {
     transition: none !important;
+}
+
+.error-message {
+    display: block;
+    margin-top: 2px;
+    font-size: 10px;
+    line-height: 11px;
+}
+.page-title {
+    z-index: 3;
 }
