--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -38,10 +38,13 @@
     padding: 10px;
     font-size: 14px;
 }
+.typeahead.dropdown-menu li:hover,
 .typeahead.dropdown-menu li.active {
     background-color: #f5c524;
 }
+.typeahead.dropdown-menu li:hover strong,
 .typeahead.dropdown-menu li.active strong,
+.typeahead.dropdown-menu li:hover a,
 .typeahead.dropdown-menu li.active a {
     color: white;
 }
