fix typeahead active style

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -42,13 +42,13 @@
 .typeahead.dropdown-menu li.active a,
 .typeahead.dropdown-menu li:hover,
 .typeahead.dropdown-menu li.active {
-    background-color: #f5c524;
+    background-color: #efcf65;
 }
 .typeahead.dropdown-menu li:hover strong,
 .typeahead.dropdown-menu li.active strong,
 .typeahead.dropdown-menu li:hover a,
 .typeahead.dropdown-menu li.active a {
-    color: white;
+    /*color: white;*/
 }
 
 .category-title {
