fix typeahead active style

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -42,7 +42,7 @@
 .typeahead.dropdown-menu li.active a,
 .typeahead.dropdown-menu li:hover,
 .typeahead.dropdown-menu li.active {
-    background-color: #efcf65;
+    background-color: #f5c524;
 }
 .typeahead.dropdown-menu li:hover strong,
 .typeahead.dropdown-menu li.active strong,
