fix hover submenu

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -105,3 +105,6 @@
 .side-custom-menu .side-menu-body li div.collapse ul li a{
     color: #F5C524;
 }
+.side-custom-menu .side-menu-body li div.collapse ul li a:hover {
+    color: #ffffff;
+}
