--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -108,3 +108,17 @@
 .side-custom-menu .side-menu-body li div.collapse ul li a:hover {
     color: #ffffff;
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
