--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -122,3 +122,17 @@
     width: 100%;
     height: 100%;
 }
+
+.header-text {
+    display: none;
+    font-size: 13px;
+    line-height: 16px;
+    color: #393939;
+    text-align: center;
+    margin-bottom: 10px;
+}
+@media screen and (min-width: 992px) {
+    .header-text {
+        display: block;
+    }
+}
